# llm-zoomcamp-2026

./: .gitignore  pyproject.toml
01-agentic-rag/: agentic_rag.py  ingest.py  rag.py  rag_helper.py
01-agentic-rag/homework/: homework.ipynb  homework.py
01-rag/: homework.ipynb  llmTesting.ipynb  rag.py
